added nav bar, background image, flash messages

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
 <% @products.each do |product| %>
 
 <div>
-  <h2><%= product.name %></h2>
+  <h2><%= link_to product.name, "/products/#{product.id}" %></h2>
   <h4><%= product.price %></h4>
   <h2><img src=<%= product.image %>></h2>
   <h3><%= product.description %></h3>
