--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="/products?discount=true">Discount Items <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Link</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -70,6 +70,21 @@
   <%= message %>
 </div>
 <% end %>
+
+<%= link_to "Add new product", "/products/new" %>
+<hr>
+<%= link_to "Price: Lowest to Highest", "/products?sort=price&sort_order=asc" %>
+<hr>
+<%= link_to "Price: Highest to Lowest", "/products?sort=price&sort_order=desc" %>
+<hr>
+<%= link_to "Random Product", "/products/random" %>
+<hr>
+
+<%= form_tag "/search" do %>
+  <%= label_tag :search %>
+  <%= text_field_tag :search %>
+  <%= submit_tag "search" %>
+  <% end %>
 
 <%= yield %>
 </div>
