Added multiple images to show page

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,8 +2,8 @@
   <% @products.each do |product| %>
     <div class="col-md-4">
       <h2><%= link_to product.name, "/products/#{product.id}"   %></h2>
-      <h4><%= product.price %></h4>
-      <%= image_tag product.image, class: "img-responsive", width: 200 %>
+      <h4><%= number_to_currency(product.price) %></h4>
+      <%= image_tag product.images.first.image_url, class: "img-responsive", width: 200 %>
       <h3><%= product.description %></h3>
       <hr>
     </div> 
