--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="/">Golf Store</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -71,20 +71,27 @@
 </div>
 <% end %>
 
-<%= link_to "Add new product", "/products/new" %>
-<hr>
-<%= link_to "Price: Lowest to Highest", "/products?sort=price&sort_order=asc" %>
-<hr>
-<%= link_to "Price: Highest to Lowest", "/products?sort=price&sort_order=desc" %>
-<hr>
-<%= link_to "Random Product", "/products/random" %>
-<hr>
+<div class="row">
+  <div class="col-md-6">
+    <%= link_to "Add new product", "/products/new" %>
+    <hr>
+    <%= link_to "Price: Lowest to Highest", "/products?sort=price&sort_order=asc" %>
+    <hr>
+  </div>
+  <div class="col-md-6">
+    <%= link_to "Price: Highest to Lowest", "/products?sort=price&sort_order=desc" %>
+    <hr>
+    <%= link_to "Random Product", "/products/random" %>
+    <hr>
+  </div>
+</div>
 
-<%= form_tag "/search" do %>
-  <%= label_tag :search %>
-  <%= text_field_tag :search %>
-  <%= submit_tag "search" %>
-  <% end %>
+    <%= form_tag "/search" do %>
+      <%= label_tag :search %>
+      <%= text_field_tag :search %>
+      <%= submit_tag "search" %>
+    <% end %>
+
 
 <%= yield %>
 </div>
