--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div>
     <%= label_tag :price %>
-    <%= text_field_tag :price, @product.price %>
+    <%= text_field_tag :price, number_to_currency(@product.price) %>
   </div>  
   <div>
     <%= label_tag :image %>
