--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,10 +1,13 @@
 
 <h1><%= @product.sale_message %></h1>
 <h1><%= @product.name %></h1>
-<h4>Price: <%= @product.price %></h4>
+<h2>Brand: <%= @product.supplier.name %></h2>
+<h4>Price: <%= number_to_currency(@product.price) %></h4>
 <h4>Tax: <%= number_to_currency(@product.taxify) %></h4>
 <h4>Total: <%= number_to_currency(@product.total) %></h4>
-<%= image_tag @product.image, class: "img-responsive", width: 200 %>
+<% @product.images.each do |image| %>
+<%= image_tag image.image_url, class: "img-responsive", width: 200  %>
+ <% end %>
 <h3><%= @product.description %></h3>
 <%= link_to "Edit Product", "/products/#{@product.id}/edit" %>
 <br>
