--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -10,8 +10,8 @@
     <%= text_field_tag :price %>
   </div>  
   <div>
-    <%= label_tag :image %>
-    <%= text_field_tag :image %>
+    <%= label_tag :image_1 %>
+    <%= text_field_tag :image_1 %>
   </div>  
   <div>
     <%= label_tag :description %>
