setting things up for Heroku

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,7 +4,7 @@
 <h2>Brand: <%= @product.supplier.name %></h2>
 <h4>Price: <%= number_to_currency(@product.price) %></h4>
 <h4>Tax: <%= number_to_currency(@product.taxify) %></h4>
-<h4>Total: <%= number_to_currency(@product.total) %></h4>
+<h4>Total: <%= number_to_currency(@product.total_number) %></h4>
 <% @product.images.each do |image| %>
 <%= image_tag image.image_url, class: "img-responsive", width: 200  %>
  <% end %>
@@ -16,8 +16,7 @@
     <%= text_field_tag :quantity %>
   </div>
   <div>
-    <%= label_tag :product_id %>
-    <%= text_field_tag :product_id %>
+    <%= hidden_field_tag :product_id, @product.id %>
   </div>
   <%= submit_tag "Buy Now" %>
 
