updated style css file

--- a/app/assets/stylesheets/style.scss.erb
+++ b/app/assets/stylesheets/style.scss.erb
@@ -1,5 +1,5 @@
 body {
   font-family: Copperplate,"Copperplate Gothic Light",fantasy;
-  background-image: url("retina_wood.png");
+  background-image: image-url("<%= asset_path('retina_wood.png') %>");
 }
 
