--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,15 +28,11 @@
         <li><%= link_to "Sign Up", "/users/sign_up" if not current_user %></li>
         <li><%= link_to "Sign In", "/users/sign_in" if not current_user %></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Categories <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+          <% Category.all.each do |category| %>
+            <li><a href="/products?category=<%= category.name %>"><%= category.name %></a></li>
+          <% end %>
           </ul>
         </li>
       </ul>
