--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,6 +9,9 @@
 <%= image_tag image.image_url, class: "img-responsive", width: 200  %>
  <% end %>
 <h3><%= @product.description %></h3>
+<% @product.categories.each do |category| %>
+  <h3>Category: <%= category.name %></h3>
+<% end %>
 
 <%= form_tag "/orders", method: :post do %>
   <div>
