added checkout page

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,7 +13,7 @@
   <h3>Category: <%= category.name %></h3>
 <% end %>
 
-<%= form_tag "/orders", method: :post do %>
+<%= form_tag "/carted_products", method: :post do %>
   <div>
     <%= label_tag :quantity %>
     <%= text_field_tag :quantity %>
@@ -21,7 +21,7 @@
   <div>
     <%= hidden_field_tag :product_id, @product.id %>
   </div>
-  <%= submit_tag "Buy Now" %>
+  <%= submit_tag "Add To Cart" %>
 
 <% end %>
 
