allow user to remove items from cart

--- a/app/views/carted_products/index.html.erb
+++ b/app/views/carted_products/index.html.erb
@@ -1,7 +1,8 @@
-<h1>Shopping Cart</h1>
+<h1>Checkout Page</h1>
 
 <% @cartedproducts.each do |cartedproduct| %>
 <%= cartedproduct.product.name %>
+<%= link_to "Remove", "carted_products/#{cartedproduct.id}", method: :delete %>
 <%= image_tag cartedproduct.product.images.first.image_url, class: "img-responsive", width: 200 %>
 <%= cartedproduct.quantity %>
 <%= cartedproduct.product.price %>
@@ -10,7 +11,7 @@
 <hr>
 <%= form_tag '/orders', method: :post do %>
 
-  <%= submit_tag "Buy Now" %>
+  <%= submit_tag "Buy Now!" %>
 
 <% end %>
 
