--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,7 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Sign Out", "/users/sign_out", method: :delete if current_user %></li>
+        <li><%= link_to "Shopping Cart", "/carted_products"%></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
