--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,5 +1,12 @@
 <h1>Thank you for your order</h1>
 <h2>Order id: <%= @order.id %></h2>
+
 <h2>Subtotal: <%= number_to_currency(@order.subtotal) %></h2>
 <h2>Tax: <%= number_to_currency(@order.tax) %></h2>
 <h2>Total: <%= number_to_currency(@order.total) %></h2>
+
+<% @order.carted_products.each do |carted_product| %>
+  <h5><%= carted_product.product.name %></h5>
+  <h5><%= carted_product.quantity %></h5>
+
+<% end %>
