--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,9 @@
 
 <div class="row">
   <div class="col-md-6">
+  <% if user_signed_in? &&current_user.admin %>
     <%= link_to "Add new product", "/products/new" %>
+  <% end %>
     <hr>
     <%= link_to "Price: Lowest to Highest", "/products?sort=price&sort_order=asc" %>
     <hr>
