--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,7 +1,22 @@
 <h1>Add a new product</h1>
 
 <%= form_tag '/products', method: :post do %>
-
+  <div>
+    <%= label_tag :name %>
+    <%= text_field_tag :name %>
+  </div>
+  <div>
+    <%= label_tag :price %>
+    <%= text_field_tag :price %>
+  </div>  
+  <div>
+    <%= label_tag :image %>
+    <%= text_field_tag :image %>
+  </div>  
+  <div>
+    <%= label_tag :description %>
+    <%= text_field_tag :description %>
+  </div>
   <%= submit_tag "Add a product" %>
 
 <% end %>
