--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,16 @@
 
+<% if @carted_product && @carted_product.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@carted_product.errors.count, "error") %> prohibited this product from being added to your cart</h2>
+ 
+    <ul>
+    <% @carted_product.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <h1><%= @product.sale_message %></h1>
 <h1><%= @product.name %></h1>
 <h2>Brand: <%= @product.supplier.name %></h2>
