--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -29,6 +29,10 @@
     <%= label_tag :description %>
     <%= text_field_tag :description, @product.description %>
   </div>
+  <div>
+    <%= label_tag :supplier_id %>
+    <%= collection_select :supplier, :supplier_id, Supplier.all, :id, :name %>
+  </div>
   <%= submit_tag "Add a product" %>
 
 <% end %>
