--- a/app/views/suppliers/new.html.erb
+++ b/app/views/suppliers/new.html.erb
@@ -1,19 +1,3 @@
 <h1>Create New Supplier:</h1>
 
-<%= form_for @supplier do |f| %> 
-
-
-  <br>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <br>
-  <%= f.label :email %>
-  <%= f.text_field :email %>
-  <br>
-  <%= f.label :phone %>
-  <%= f.text_field :phone %>
-  <br>
-
-  <%= f.submit "Add new supplier" %>
-
-<% end %>
+<%= render 'form' %>
